[gd_scene load_steps=13 format=1]

[ext_resource path="res://HelpMenu.gd" type="Script" id=1]
[ext_resource path="res://ZonaNoTocable.tscn" type="PackedScene" id=2]
[ext_resource path="res://ZonaTrigger.tscn" type="PackedScene" id=3]
[ext_resource path="res://QPF_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://QPF_assets/art/HadamardPU.png" type="Texture" id=5]
[ext_resource path="res://QPF_assets/music/tutorialBad.opus" type="AudioStream" id=6]
[ext_resource path="res://QPF_assets/music/tutorialGood.opus" type="AudioStream" id=7]
[ext_resource path="res://NextBackButton.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]

font/size = 96
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]

font/size = 44
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[node name="HelpMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )
ZonaNoTocable = ExtResource( 2 )
ZonaTriggerFP = ExtResource( 3 )

[node name="ScoreTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Messages" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="CantTipsMessage" type="Label" parent="Messages"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 257.0
margin/top = -4.0
margin/right = 445.0
margin/bottom = 155.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.321569, 0.145098, 1 )
text = "1/3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TipNameMessage" type="Label" parent="Messages"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 295.0
margin/right = 503.0
margin/bottom = 441.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "      power up:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HadPUSprite" type="Sprite" parent="Messages"]

visibility/visible = false
transform/pos = Vector2( 70.1073, 349.171 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="GoodTipMessage" type="Label" parent="Messages"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 457.0
margin/right = 705.0
margin/bottom = 788.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.266667, 0.8, 0.0745098, 1 )
custom_colors/font_color_shadow = Color( 0.102244, 0.230469, 0.0711212, 1 )
text = "+scores +1 point."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BadTipMessage" type="Label" parent="Messages"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 513.0
margin/right = 705.0
margin/bottom = 788.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.875, 0.0102539, 0.0102539, 1 )
custom_colors/font_color_shadow = Color( 0.222656, 0.141769, 0.141769, 1 )
text = "-can be flipped to white.
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="UntouchableMessage" type="Label" parent="Messages"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 9.0
margin/top = 752.0
margin/right = 707.0
margin/bottom = 871.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.321569, 0.145098, 1 )
custom_colors/font_color_shadow = Color( 0.207031, 0.204087, 0.0186005, 1 )
text = "---Untouchable area---
"
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreMessage" type="Label" parent="Messages"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 319.0
margin/top = 1088.0
margin/right = 455.0
margin/bottom = 1247.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.90625, 0.0531006, 0.0531006, 1 )
text = "+1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BadEffect" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 15.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="GoodEffect" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 7 )
stream/play = false
stream/loop = false
stream/volume_db = 17.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="NextButton" parent="." instance=ExtResource( 8 )]

margin/left = 548.0
margin/top = 920.0
margin/right = 719.0
margin/bottom = 1021.0

[node name="BackButton" parent="." instance=ExtResource( 8 )]

margin/left = -1.0
margin/top = 920.0
margin/right = 170.0
margin/bottom = 1021.0

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]


